fix: eliminate junk cards in winning combination and resolve duplicate showdown payouts